# app/Http/Controllers/Api/ProfileController.php
@@ -6,9 +6,22 @@ use App\Http\Controllers\Controller;
 use Illuminate\Http\Request;
 use Illuminate\Validation\Rule;
 use Illuminate\Support\Facades\Hash;
+use OpenApi\Attributes as OA;
 
 class ProfileController extends Controller
 {
+
+#[OA\Get(
+    path:"/api/profile",
+    summary: "Voir son profile --utilisateur",
+    tags:["Profil"],
+    security:[["bearerAuth" => []]],
+
+    responses:[
+        new OA\Response(response:200, description:"profile envoyé"),
+        new OA\Response(response:401, description:"non authentifié")
+    ]
+)]
     public function show(Request $request){
         $user = auth()->user();
         return response()->json(['user' => $user]);
